--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>John Doe's Resume</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>John Doe</h1>
+        <p>Software Developer</p>
+    </header>
+    <section>
+        <h2>About Me</h2>
+        <p>Passionate software developer with 5 years of experience...</p>
+    </section>
+    <section>
+        <h2>Experience</h2>
+        <ul>
+            <li><strong>Software Engineer</strong> at TechCorp (2018-2023)</li>
+            <li><strong>Junior Developer</strong> at WebStart (2016-2018)</li>
+        </ul>
+    </section>
+    <section>
+        <h2>Projects</h2>
+        <ul>
+            <li><a href="https://github.com/username/project1">Project 1</a>: Description of the project...</li>
+            <li><a href="https://github.com/username/project2">Project 2</a>: Description of the project...</li>
+        </ul>
+    </section>
+    <section>
+        <h2>Education</h2>
+        <p>B.Sc. in Computer Science, University of Example (2012-2016)</p>
+    </section>
+    <section>
+        <h2>Contact</h2>
+        <p>Email: johndoe@example.com</p>
+        <p>LinkedIn: <a href="https://linkedin.com/in/johndoe">linkedin.com/in/johndoe</a></p>
+    </section>
+</body>
+</html>
